adding old thingspeak download

--- a/process_PurpleAir_rawdata.ipynb
+++ b/process_PurpleAir_rawdata.ipynb
@@ -57,8 +57,14 @@
    "source": [
     "def remove_frozen_sensor(dataframe):\n",
     "    \n",
-    "    #remove data where one sensor consistently reads zero\n",
-    "    # Currently adds NaN any time there is a zero in one of the sensors\n",
+    "    '''\n",
+    "    Removes data where one sensor consistently reads zero.\n",
+    "    Currently adds NaN any time there is a zero in one of the sensors.\n",
+    "    \n",
+    "    dataframe: pandas dataframe\n",
+    "    \n",
+    "    returns: pandas dataframe QA\n",
+    "    '''\n",
     "    \n",
     "    # Load the PM2.5 values\n",
     "    PM25_Ah = dataframe['PM2.5 (CF=1)'].copy()\n",
@@ -87,7 +93,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def correct_smoke_PA(PM25_Ah,PM25_Bh):   \n",
+    "def correct_smoke_PA(PM25_Ah,PM25_Bh,humidity):\n",
+    "    \n",
+    "    '''\n",
+    "    Cleans (QA/QC) and applies EPA smoke correction to PurpleAir PM2.5 data.\n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    \n",
     "    #clean data\n",
     "    avgAB = (PM25_Ah+PM25_Bh)/2\n",
     "    diffAB = abs(PM25_Ah-PM25_Bh)\n",
@@ -98,7 +111,7 @@
     "    # Create average of two measurement values\n",
     "    avgAB = avgAB.where((diffAB < 5) | (rel_diffAB < 0.7))\n",
     "    #smoke correction\n",
-    "    PM2_5corr = 0.534*(avgAB)- 0.0844*PA_data['Humidity'] + 5.604\n",
+    "    PM2_5corr = 0.534*(avgAB)- 0.0844*humidity + 5.604\n",
     "    \n",
     "    return PM2_5corr"
    ]
@@ -110,6 +123,10 @@
    "outputs": [],
    "source": [
     "def convert_AQI(PM_data):   \n",
+    "    \n",
+    "    '''\n",
+    "    '''\n",
+    "    \n",
     "    final_aqi = PM_data.copy()\n",
     "    # mask changes everything that does not satisfy the condition\n",
     "    # for example the first line below leaves everything where \n",
@@ -133,7 +150,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_processed(file,PA_data,check_label):   \n",
+    "def write_processed(file,PA_data,check_label):  \n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
     "    station_meta = file.split('_')\n",
     "    ID = station_meta[-4]\n",
     "    name = station_meta[-3]\n",
@@ -315,8 +337,8 @@
     "    PM25_Ah = PA_data['PM2.5 (CF=1)'].copy()\n",
     "    PM25_Bh = PA_data['PM2.5_b (CF=1)'].copy()\n",
     "    \n",
-    "    PA_data['PM2.5_corrected'] = correct_smoke_PA(PM25_Ah,PM25_Bh)\n",
-    "    test = correct_smoke_PA(PM25_Ah,PM25_Bh)\n",
+    "    PA_data['PM2.5_corrected'] = correct_smoke_PA(PM25_Ah,PM25_Bh,PA_data['Humidity'])\n",
+    "    test = correct_smoke_PA(PM25_Ah,PM25_Bh,PA_data['Humidity'])\n",
     "    \n",
     "    # 4. Calculate AQI\n",
     "    PA_data['AQI'] = convert_AQI(PA_data['PM2.5_corrected'])\n",
