adding comments to functions

--- a/process_PurpleAir_rawdata.ipynb
+++ b/process_PurpleAir_rawdata.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,13 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def convert_AQI(PM_data):   \n",
     "    \n",
     "    '''\n",
+    "    Convert PM2.5 concentration values to EPA AQI numbers ranging 1 (clean) to 6 (dirty)\n",
+    "\n",
     "    '''\n",
     "    \n",
     "    final_aqi = PM_data.copy()\n",
@@ -146,13 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_processed(file,PA_data,check_label):  \n",
     "    \n",
     "    '''\n",
+    "    Write out cleaned hourly data to a new file.\n",
     "    \n",
     "    '''\n",
     "    \n",
@@ -282,7 +285,7 @@
     "    load_data = pd.read_csv(file, na_values='NaN', keep_default_na=False)\n",
     "\n",
     "    # Remove duplicate dates if present\n",
-    "    # Currently keeps first entry - need more sophisticated to check for NaN\n",
+    "    # Currently keeps first entry\n",
     "    # ignore_index=True re-indexes the resulting array\n",
     "    PA_load = load_data.drop_duplicates(subset='date (UTC)', keep='first', inplace=False, ignore_index=True)\n",
     "    \n",
